--- a/app/src/main/res/layout/fragment_edit_continuous_routine.xml
+++ b/app/src/main/res/layout/fragment_edit_continuous_routine.xml
@@ -32,7 +32,6 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_EditRoutine_continuous_routines_name"
             style="@style/textInputDiscreteStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,7 +43,6 @@
             app:shapeAppearance="@style/textInputShape">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_EditRoutine_continuous_routine_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
@@ -64,20 +62,19 @@
             <LinearLayout
                 android:id="@+id/ll_EditRoutine_continuous_firstRow"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="0sp"
                 android:layout_weight="1"
                 android:animateLayoutChanges="true"
+                android:baselineAligned="false"
                 android:orientation="horizontal">
 
                 <include
-                    android:id="@+id/tile_EditRoutine_continuous_0"
                     layout="@layout/viewholder_edit_tile"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
 
                 <include
-                    android:id="@+id/tile_EditRoutine_continuous_1"
                     layout="@layout/viewholder_edit_tile"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
@@ -91,17 +88,16 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:animateLayoutChanges="true"
+                android:baselineAligned="false"
                 android:orientation="horizontal">
 
                 <include
-                    android:id="@+id/tile_EditRoutine_continuous_2"
                     layout="@layout/viewholder_edit_tile"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
 
                 <include
-                    android:id="@+id/tile_EditRoutine_continuous_3"
                     layout="@layout/viewholder_edit_tile"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
@@ -115,17 +111,16 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:animateLayoutChanges="true"
+                android:baselineAligned="false"
                 android:orientation="horizontal">
 
                 <include
-                    android:id="@+id/tile_EditRoutine_continuous_4"
                     layout="@layout/viewholder_edit_tile"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
 
                 <include
-                    android:id="@+id/tile_EditRoutine_continuous_5"
                     layout="@layout/viewholder_edit_tile"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
@@ -142,14 +137,12 @@
                 android:orientation="horizontal">
 
                 <include
-                    android:id="@+id/tile_EditRoutine_continuous_6"
                     layout="@layout/viewholder_edit_tile"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1" />
 
                 <include
-                    android:id="@+id/tile_EditRoutine_continuous_7"
                     layout="@layout/viewholder_edit_tile"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
