--- a/app/src/main/res/layout/viewholder_edit_tile.xml
+++ b/app/src/main/res/layout/viewholder_edit_tile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -47,7 +47,7 @@
                     android:layout_gravity="center"
                     android:imeOptions="actionDone"
                     android:maxLines="2"
-                    android:text="Tile name!"
+                    android:text="@string/str_tv_viewholder_smallTile_name"
                     android:textAlignment="center"
                     android:textSize="15sp" />
 
@@ -65,7 +65,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10sp"
-                    android:text="Countdown"
+                    android:text="@string/str_cb_viewholder_tile_countdown"
                     app:layout_constraintBottom_toTopOf="@id/cl_viewholder_tile_timeLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/cl_viewholder_tile_timeLayout"
@@ -86,7 +86,7 @@
                         android:id="@+id/tv_viewholder_tile_info"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Time"
+                        android:text="@string/str_tv_viewholder_tile_info"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                         android:textSize="20sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -94,10 +94,9 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/tv_viewholder_tile_countdownTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="10:00"
+                        android:text="@string/str_tv_viewholder_tile_countdownTime"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -113,4 +112,4 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-</FrameLayout>
+</merge>
