--- a/app/src/main/res/layout/viewholder_run_tile.xml
+++ b/app/src/main/res/layout/viewholder_run_tile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,14 +15,12 @@
         app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius">
 
         <LinearLayout
-            android:id="@+id/ll_viewholder_runTile_cardContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:baselineAligned="false"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/ll_viewholder_runTile_infoLayout"
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -36,7 +34,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:maxLines="2"
-                    android:text="Tile name!"
+                    android:text="@string/str_tv_viewholder_runTile_name"
                     android:textAlignment="center"
                     android:textSize="15sp" />
 
@@ -62,7 +60,7 @@
                     android:id="@+id/tv_viewholder_runTile_totalTimeMain"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="01:32:12"
+                    android:text="@string/str_tv_viewholder_runTile_totalTimeMain"
                     android:textAlignment="center" />
 
             </LinearLayout>
@@ -71,7 +69,6 @@
                 android:id="@+id/cl_viewholder_runTile_timeLayout"
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
                 android:layout_weight="1"
                 android:orientation="vertical"
                 android:visibility="gone"
@@ -96,7 +93,7 @@
                     android:id="@+id/tv_viewholder_runTile_currentTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="20:00"
+                    android:text="@string/str_tv_viewholder_runTile_currentTime"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toTopOf="@id/tv_viewholder_runTile_totalTimeInfo"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +104,7 @@
                     android:id="@+id/tv_viewholder_runTile_totalTimeInfo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total time:"
+                    android:text="@string/str_tv_viewholder_runTile_totalTimeInfo"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/tv_viewholder_runTile_totalTime"
@@ -119,7 +116,7 @@
                     android:id="@+id/tv_viewholder_runTile_totalTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="20:00"
+                    android:text="@string/str_tv_viewholder_runTile_totalTime"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -132,4 +129,4 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-</FrameLayout>
+</merge>
