--- a/app/src/main/res/layout/fragment_run_continuous_routine.xml
+++ b/app/src/main/res/layout/fragment_run_continuous_routine.xml
@@ -52,24 +52,36 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:animateLayoutChanges="true">
+                android:animateLayoutChanges="true"
+                android:orientation="horizontal">
 
-                <include
-                    android:id="@+id/tile_RunRoutine_continuous_0"
-                    layout="@layout/viewholder_run_tile"
+                <FrameLayout
+                    android:id="@+id/fl_RunRoutine_sequential_tileFrame_0"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
-                    app:layout_constraintEnd_toStartOf="@id/tile_RunRoutine_continuous_1"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/fl_RunRoutine_sequential_tileFrame_1">
 
-                <include
-                    android:id="@+id/tile_RunRoutine_continuous_1"
-                    layout="@layout/viewholder_run_tile"
+                    <include
+                        android:id="@+id/tile_RunRoutine_continuous_0"
+                        layout="@layout/viewholder_run_tile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/fl_RunRoutine_sequential_tileFrame_1"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/tile_RunRoutine_continuous_0" />
+                    app:layout_constraintLeft_toRightOf="@id/fl_RunRoutine_sequential_tileFrame_0"
+                    app:layout_constraintRight_toRightOf="parent">
+
+                    <include
+                        android:id="@+id/tile_RunRoutine_continuous_1"
+                        layout="@layout/viewholder_run_tile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -79,21 +91,34 @@
                 android:layout_weight="1"
                 android:animateLayoutChanges="true">
 
-                <include
-                    android:id="@+id/tile_RunRoutine_continuous_2"
-                    layout="@layout/viewholder_run_tile"
-                    android:layout_width="0dp"
+                <FrameLayout
+                    android:id="@+id/fl_RunRoutine_sequential_tileFrame_2"
+                    android:layout_width="0sp"
                     android:layout_height="match_parent"
-                    app:layout_constraintEnd_toStartOf="@id/tile_RunRoutine_continuous_3"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintEnd_toStartOf="@id/fl_RunRoutine_sequential_tileFrame_3"
+                    app:layout_constraintStart_toStartOf="parent">
 
-                <include
-                    android:id="@+id/tile_RunRoutine_continuous_3"
-                    layout="@layout/viewholder_run_tile"
+                    <include
+                        android:id="@+id/tile_RunRoutine_continuous_2"
+                        layout="@layout/viewholder_run_tile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/fl_RunRoutine_sequential_tileFrame_3"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tile_RunRoutine_continuous_2" />
+                    app:layout_constraintStart_toEndOf="@id/fl_RunRoutine_sequential_tileFrame_2">
+
+                    <include
+                        android:id="@+id/tile_RunRoutine_continuous_3"
+                        layout="@layout/viewholder_run_tile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -103,21 +128,34 @@
                 android:layout_weight="1"
                 android:animateLayoutChanges="true">
 
-                <include
-                    android:id="@+id/tile_RunRoutine_continuous_4"
-                    layout="@layout/viewholder_run_tile"
-                    android:layout_width="0dp"
+                <FrameLayout
+                    android:id="@+id/fl_RunRoutine_sequential_tileFrame_4"
+                    android:layout_width="0sp"
                     android:layout_height="match_parent"
-                    app:layout_constraintEnd_toStartOf="@id/tile_RunRoutine_continuous_5"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintEnd_toStartOf="@id/fl_RunRoutine_sequential_tileFrame_5"
+                    app:layout_constraintStart_toStartOf="parent">
 
-                <include
-                    android:id="@+id/tile_RunRoutine_continuous_5"
-                    layout="@layout/viewholder_run_tile"
+                    <include
+                        android:id="@+id/tile_RunRoutine_continuous_4"
+                        layout="@layout/viewholder_run_tile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/fl_RunRoutine_sequential_tileFrame_5"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tile_RunRoutine_continuous_4" />
+                    app:layout_constraintStart_toEndOf="@id/fl_RunRoutine_sequential_tileFrame_4">
+
+                    <include
+                        android:id="@+id/tile_RunRoutine_continuous_5"
+                        layout="@layout/viewholder_run_tile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -127,22 +165,34 @@
                 android:layout_weight="1"
                 android:animateLayoutChanges="true">
 
-                <include
-                    android:id="@+id/tile_RunRoutine_continuous_6"
-                    layout="@layout/viewholder_run_tile"
-                    android:layout_width="0dp"
+                <FrameLayout
+                    android:id="@+id/fl_RunRoutine_sequential_tileFrame_6"
+                    android:layout_width="0sp"
                     android:layout_height="match_parent"
-                    app:layout_constraintEnd_toStartOf="@id/tile_RunRoutine_continuous_7"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintEnd_toStartOf="@id/fl_RunRoutine_sequential_tileFrame_7"
+                    app:layout_constraintStart_toStartOf="parent">
 
+                    <include
+                        android:id="@+id/tile_RunRoutine_continuous_6"
+                        layout="@layout/viewholder_run_tile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
 
-                <include
-                    android:id="@+id/tile_RunRoutine_continuous_7"
-                    layout="@layout/viewholder_run_tile"
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/fl_RunRoutine_sequential_tileFrame_7"
                     android:layout_width="0sp"
                     android:layout_height="match_parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/tile_RunRoutine_continuous_6" />
+                    app:layout_constraintStart_toEndOf="@id/fl_RunRoutine_sequential_tileFrame_6">
+
+                    <include
+                        android:id="@+id/tile_RunRoutine_continuous_7"
+                        layout="@layout/viewholder_run_tile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </FrameLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
