--- a/app/src/main/res/layout/fragment_edit_sequential_routine.xml
+++ b/app/src/main/res/layout/fragment_edit_sequential_routine.xml
@@ -56,70 +56,133 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10sp"
             android:text="@string/str_btn_EditRoutine_sequential_routines_organize"
             app:cornerRadius="@dimen/dimen_btnCorners" />
 
     </LinearLayout>
 
-    <include layout="@layout/layout_color_select_mode" />
-
     <include
         layout="@layout/layout_organize_sequential_routine"
         android:visibility="gone" />
 
-
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_EditRoutine_sequential_tile_card"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/unrelatedElementsSpacing"
-        android:clickable="true"
-        android:elevation="10sp"
-        app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cv_EditRoutine_sequential_tile_card"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="30dp">
+            android:layout_height="200sp"
+            android:layout_marginHorizontal="@dimen/unrelatedElementsSpacing"
+            android:layout_marginVertical="50sp"
+            app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
+            app:cardElevation="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/iv_EditRoutine_sequential_tile_icon"
-                android:layout_width="100sp"
-                android:layout_height="100sp"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:transitionName="editRoutineIcon"
-                app:srcCompat="@drawable/ic_defaultdrawable" />
-
-            <Space
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="10dp" />
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="30dp">
 
-            <EditText
-                android:id="@+id/et_EditRoutine_sequential_tile_name"
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/iv_EditRoutine_sequential_tile_icon"
+                    android:layout_width="100sp"
+                    android:layout_height="100sp"
+                    android:layout_gravity="center"
+                    android:background="?attr/selectableItemBackground"
+                    android:transitionName="editRoutineIcon"
+                    app:srcCompat="@drawable/ic_defaultdrawable" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_EditRoutine_sequential_tile_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10sp"
+                    android:maxLines="1"
+                    android:text="@string/str_tv_EditRoutine_sequential_tileName"
+                    android:textAlignment="center"
+                    android:textSize="17sp" />
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cv_EditRoutine_sequential_tile_settingsDisplay_card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@id/cv_EditRoutine_sequential_tile_card"
+            android:layout_alignTop="@+id/cv_EditRoutine_sequential_tile_card"
+            android:layout_margin="10sp"
+            android:clickable="true"
+            app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
+            app:cardElevation="15sp">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:imeOptions="actionGo"
-                android:inputType="none"
-                android:maxLines="1"
-                android:text="@string/str_tv_EditRoutine_sequential_tileName"
-                android:textSize="17sp" />
+                android:animateLayoutChanges="true"
+                android:orientation="vertical"
+                android:padding="10sp">
 
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+                <ImageView
+                    android:id="@+id/iv_EditRoutine_sequential_tile_settingsDisplay_modeIcon"
+                    android:layout_width="70sp"
+                    android:layout_height="70sp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_mode_count_down" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_EditRoutine_sequential_tile_settingsDisplay_modeSummary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5sp"
+                    android:text="Count down"
+                    android:textAlignment="center"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_EditRoutine_sequential_tile_settingsDisplay_cdTimeInfo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Countdown time:"
+                    android:textAlignment="center"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_EditRoutine_sequential_tile_settingsDisplay_cdTimeValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/str_tv_viewholder_runTile_currentTime" />
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+    </RelativeLayout>
+
+    <!---->
 
     <LinearLayout
         android:id="@+id/ll_EditRoutine_sequential_cycle_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50sp"
+        android:layout_marginBottom="20sp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -130,49 +193,79 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginBottom="20sp"
             android:text="@string/str_btn_EditRoutine_sequential_tileSettings"
             app:cornerRadius="@dimen/dimen_btnCorners" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="@dimen/unrelatedElementsSpacing"
+            android:layout_height="90sp"
+            android:paddingHorizontal="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ll_EditRoutine_sequential_cycle_layout">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_EditRoutine_sequential_cycle_prev"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:maxLines="1"
-                android:text="@string/str_btn_EditRoutine_sequential_prev"
-                app:cornerRadius="@dimen/dimen_btnCorners" />
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cv_EditRoutine_sequential_cycle_prev"
+                android:layout_width="60sp"
+                android:layout_height="match_parent"
+                android:layout_margin="15sp"
+                android:clickable="true"
+                android:padding="10sp"
+                app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
+                app:cardElevation="7sp"
+                app:layout_constraintStart_toStartOf="parent">
 
-            <Space
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.1" />
+                <ImageView
+                    android:id="@+id/iv_EditRoutine_sequential_cycle_prev_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_arrow_left" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_EditRoutine_sequential_cycle_next"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:maxLines="1"
-                android:text="@string/str_btn_EditRoutine_sequential_cycle_next"
-                app:cornerRadius="@dimen/dimen_btnCorners" />
+            </com.google.android.material.card.MaterialCardView>
 
-        </LinearLayout>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cv_EditRoutine_sequential_cycle_delete"
+                android:layout_width="90sp"
+                android:layout_height="match_parent"
+                android:layout_margin="15sp"
+                android:clickable="true"
+                android:padding="10sp"
+                app:cardBackgroundColor="@color/colorCancelDark"
+                app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
+                app:cardElevation="7sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:layout_editor_absoluteY="5dp">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_EditRoutine_sequential_cycle_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:backgroundTint="@color/colorCancelDark"
-            android:text="@string/str_btn_EditRoutine_sequential_cycle_delete"
-            app:cornerRadius="@dimen/dimen_btnCorners" />
+                <ImageView
+                    android:id="@+id/iv_EditRoutine_sequential_cycle_delete_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_delete" />
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/cv_EditRoutine_sequential_cycle_next"
+                android:layout_width="60sp"
+                android:layout_height="match_parent"
+                android:layout_margin="15sp"
+                android:clickable="true"
+                android:padding="10sp"
+                app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
+                app:cardElevation="7sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:layout_editor_absoluteY="5dp">
+
+                <ImageView
+                    android:id="@+id/iv_EditRoutine_sequential_cycle_next_icon"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_arrow_right" />
+
+            </com.google.android.material.card.MaterialCardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
 
