--- a/app/src/main/res/layout/viewholder_edit_tile.xml
+++ b/app/src/main/res/layout/viewholder_edit_tile.xml
@@ -1,115 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_viewholder_smallTile_card"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="12sp"
+    app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
+    app:cardElevation="5sp">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_viewholder_smallTile_card"
+    <LinearLayout
+        android:id="@+id/ll_viewholder_smallTile_cardContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="12sp"
-        app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius">
+        android:baselineAligned="false"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/ll_viewholder_smallTile_cardContent"
-            android:layout_width="match_parent"
+            android:id="@+id/ll_viewholder_smallTile_infoLayout"
+            android:layout_width="0sp"
             android:layout_height="match_parent"
-            android:baselineAligned="false"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingHorizontal="20sp"
+            android:paddingVertical="15sp">
 
-            <LinearLayout
-                android:id="@+id/ll_viewholder_smallTile_infoLayout"
-                android:layout_width="0sp"
-                android:layout_height="match_parent"
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_viewholder_smallTile_icon"
+                android:layout_width="match_parent"
+                android:layout_height="0sp"
+                android:layout_gravity="center"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingHorizontal="20sp"
-                android:paddingVertical="15sp">
+                android:src="@drawable/ic_defaultdrawable" />
 
-                <com.google.android.material.imageview.ShapeableImageView
-                    android:id="@+id/iv_viewholder_smallTile_icon"
-                    android:layout_width="50sp"
-                    android:layout_height="50sp"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_defaultdrawable" />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="0sp"
+                android:layout_weight="0.03" />
 
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="0sp"
-                    android:layout_weight="0.03" />
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_viewholder_smallTile_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:imeOptions="actionDone"
-                    android:maxLines="2"
-                    android:text="@string/str_tv_viewholder_smallTile_name"
-                    android:textAlignment="center"
-                    android:textSize="15sp" />
-
-            </LinearLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_viewholder_tile_countdownRoot"
-                android:layout_width="0sp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:visibility="gone">
-
-                <com.google.android.material.checkbox.MaterialCheckBox
-                    android:id="@+id/cb_viewholder_tile_countdown"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10sp"
-                    android:text="@string/str_cb_viewholder_tile_countdown"
-                    app:layout_constraintBottom_toTopOf="@id/cl_viewholder_tile_timeLayout"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/cl_viewholder_tile_timeLayout"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/cl_viewholder_tile_timeLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="0sp"
-                    android:layout_alignParentBottom="true"
-                    android:orientation="vertical"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cb_viewholder_tile_countdown">
-
-                    <TextView
-                        android:id="@+id/tv_viewholder_tile_info"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/str_tv_viewholder_tile_info"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
-                        android:textSize="20sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/str_tv_viewholder_tile_countdownTime"
-                        android:textSize="20sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_viewholder_tile_info" />
-
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_viewholder_smallTile_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:maxLines="2"
+                android:text="@string/str_tv_viewholder_smallTile_name"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
-    </com.google.android.material.card.MaterialCardView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_viewholder_tile_countdownRoot"
+            android:layout_width="0sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:visibility="gone">
 
-</merge>
+            <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/cb_viewholder_tile_countdown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10sp"
+                android:text="@string/str_cb_viewholder_tile_countdown"
+                app:layout_constraintBottom_toTopOf="@id/cl_viewholder_tile_timeLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/cl_viewholder_tile_timeLayout"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_viewholder_tile_timeLayout"
+                android:layout_width="match_parent"
+                android:layout_height="0sp"
+                android:layout_alignParentBottom="true"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/cb_viewholder_tile_countdown">
+
+                <TextView
+                    android:id="@+id/tv_viewholder_tile_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/str_tv_viewholder_tile_info"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/str_tv_viewholder_tile_countdownTime"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_viewholder_tile_info" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/iv_viewholder_smallTile_editIcon"
+            android:layout_width="0sp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/ic_settings"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </LinearLayout>
+
+</com.google.android.material.card.MaterialCardView>
