--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -14,6 +14,15 @@
         <action
             android:id="@+id/action_startFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_startFragment_to_editSequentialRoutineFragment"
+            app:destination="@id/editSequentialRoutineFragment" />
+        <action
+            android:id="@+id/action_startFragment_to_editContinuousRoutineFragment"
+            app:destination="@id/editContinuousRoutineFragment" />
+        <action
+            android:id="@+id/action_startFragment_to_runContinuousRoutine"
+            app:destination="@id/runContinuousRoutine" />
     </fragment>
 
     <fragment
@@ -47,6 +56,9 @@
         <argument
             android:name="routineUid"
             app:argType="string" />
+        <action
+            android:id="@+id/action_editSequentialRoutineFragment_to_tileSettingsFragment"
+            app:destination="@id/tileSettingsFragment" />
     </fragment>
     <fragment
         android:id="@+id/editContinuousRoutineFragment"
@@ -59,6 +71,9 @@
         <argument
             android:name="routineUID"
             app:argType="string" />
+        <action
+            android:id="@+id/action_editContinuousRoutineFragment_to_tileSettingsFragment"
+            app:destination="@id/tileSettingsFragment" />
     </fragment>
     <fragment
         android:id="@+id/runContinuousRoutine"
@@ -91,5 +106,22 @@
         <action
             android:id="@+id/action_settingsFragment_to_startFragment"
             app:destination="@id/startFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/tileSettingsFragment"
+        android:name="de.threateningcodecomments.routinetimer.TileSettingsFragment"
+        android:label="TileSettingsFragment" >
+        <action
+            android:id="@+id/action_tileSettingsFragment_to_editSequentialRoutineFragment"
+            app:destination="@id/editSequentialRoutineFragment" />
+        <action
+            android:id="@+id/action_tileSettingsFragment_to_editContinuousRoutineFragment"
+            app:destination="@id/editContinuousRoutineFragment" />
+        <argument
+            android:name="routineUid"
+            app:argType="string" />
+        <argument
+            android:name="tileUid"
+            app:argType="string" />
     </fragment>
 </navigation>
