--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#ba86fc</color>
     <color name="colorSecondary">#03DAC5</color>
 
-    <color name="colorAcceptLight">#69FF69</color>
+    <color name="colorAcceptLight">#50FF50</color>
     <color name="colorAcceptDark">#99FF99</color>
 
     <color name="colorCancelLight">#FF5060</color>
     <color name="colorCancelDark">#FF7080</color>
+
+    <color name="contrastDarkMode">#b8b8b8</color>
+    <color name="contrastLightMode">#111111</color>
+
+    <color name="disabledColor">#C5C5C5</color>
+    <color name="disabledColorDark">#474747</color>
 </resources>
