--- a/app/src/main/res/layout/fragment_edit_continuous_routine.xml
+++ b/app/src/main/res/layout/fragment_edit_continuous_routine.xml
@@ -11,6 +11,7 @@
     tools:context=".EditContinuousRoutineFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -19,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_EditRoutine_continuous_routineName"
             style="@style/textInputDiscreteStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -246,5 +248,38 @@
 
 
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/fl_EditRoutine_continuous_deleteView"
+        android:layout_width="match_parent"
+        android:layout_height="100sp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="100sp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_EditRoutine_continuous_deleteView_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/str_tv_EditRoutine_continuous_deleteView_text"
+                android:textSize="30sp" />
+
+            <ImageView
+                android:id="@+id/iv_EditRoutine_continuous_deleteView_icon"
+                android:layout_width="50sp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_delete" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
