--- a/app/src/main/res/layout/fragment_tile_settings.xml
+++ b/app/src/main/res/layout/fragment_tile_settings.xml
@@ -9,8 +9,9 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_TileSettings_tile_card"
         android:layout_width="match_parent"
-        android:layout_height="200sp"
-        android:layout_margin="50sp"
+        android:layout_height="200dp"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginVertical="30dp"
         app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -44,7 +45,7 @@
         android:id="@+id/tl_TileSettings_settingsTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50sp"
+        android:layout_marginTop="20sp"
         app:layout_constraintTop_toBottomOf="@+id/cv_TileSettings_tile_card">
 
         <com.google.android.material.tabs.TabItem
@@ -70,7 +71,6 @@
         android:layout_height="0sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tl_TileSettings_settingsTabLayout" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
