--- a/app/src/main/res/layout/layout_tile_settings_timing.xml
+++ b/app/src/main/res/layout/layout_tile_settings_timing.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,96 +12,229 @@
         android:orientation="vertical">
 
         <!--Mode-->
-        <LinearLayout
-            android:id="@+id/ll_TileSettings_timing_mode_main"
+        <de.threateningcodecomments.views.TileSettingsMain
+            android:id="@+id/ml_TileSettings_timing_mode_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:animateLayoutChanges="true"
-            android:background="@drawable/border_bottom"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="12sp">
-
-                <ImageView
-                    android:id="@+id/iv_TileSettings_timing_mode_icon"
-                    android:layout_width="50sp"
-                    android:layout_height="50sp"
-                    android:src="@drawable/ic_mode_icon" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10sp"
-                    android:orientation="vertical">
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_TileSettings_timing_mode_info"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Mode"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_TileSettings_timing_mode_summary"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="summary" />
-
-                </LinearLayout>
-
-            </LinearLayout>
+            app:hasSummary="true"
+            app:name="Mode"
+            app:editLayoutIsVisible="true"
+            app:src="@drawable/ic_mode_icon">
 
             <LinearLayout
                 android:id="@+id/ll_TileSettings_timing_mode_editLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:paddingHorizontal="20sp"
+                android:paddingBottom="10sp"
                 android:visibility="gone">
 
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cv_TileSettings_timing_mode_cut"
-                    android:layout_width="0sp"
-                    android:layout_height="50sp"
-                    android:layout_weight="1"
-                    app:cardCornerRadius="0sp"
-                    app:cardElevation="0sp">
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/dropdownsStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/str_dd_SelectRoutine_createRoutine_mode"
+                    app:boxCornerRadiusTopEnd="@dimen/dimen_textFieldCorners"
+                    app:boxCornerRadiusTopStart="@dimen/dimen_textFieldCorners"
+                    app:shapeAppearance="@style/dropdownsShape">
 
-                    <com.google.android.material.textview.MaterialTextView
+                    <AutoCompleteTextView
+                        android:id="@+id/dd_TileSettings_timing_mode_editDropDown"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Count up"
-                        android:textAlignment="center" />
+                        android:inputType="none" />
 
-                </com.google.android.material.card.MaterialCardView>
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/cv_TileSettings_timing_mode_cdt"
-                    android:layout_width="0sp"
-                    android:layout_height="50sp"
-                    android:layout_weight="1"
-                    app:cardCornerRadius="0sp"
-                    app:cardElevation="0sp">
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Count down"
-                        android:textAlignment="center" />
-
-                </com.google.android.material.card.MaterialCardView>
+                </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
 
+        </de.threateningcodecomments.views.TileSettingsMain>
 
-        </LinearLayout>
+        <!--Reset Settings-->
+        <de.threateningcodecomments.views.TileSettingsMain
+            android:id="@+id/ml_TileSettings_timing_reset_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hasSummary="false"
+            app:name="Resets"
+            app:editLayoutIsVisible="true"
+            app:src="@drawable/ic_reset_off">
+
+            <!--EditLayout reset-->
+            <LinearLayout
+                android:id="@+id/ll_TileSettings_timing_reset_editLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical"
+                android:visibility="visible">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/cv_TileSettings_timing_resets_on"
+                        android:layout_width="0sp"
+                        android:layout_height="50sp"
+                        app:cardCornerRadius="0sp"
+                        app:cardElevation="0sp"
+                        app:layout_constraintEnd_toStartOf="@id/cv_TileSettings_timing_resets_off"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/tv_TileSettings_timing_resets_on"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="On" />
+
+                    </com.google.android.material.card.MaterialCardView>
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/cv_TileSettings_timing_resets_off"
+                        android:layout_width="0sp"
+                        android:layout_height="50sp"
+                        app:cardCornerRadius="0sp"
+                        app:cardElevation="0sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/cv_TileSettings_timing_resets_on"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/tv_TileSettings_timing_resets_off"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_margin="10dp"
+                            android:text="Off"
+                            android:textAlignment="center" />
+
+                    </com.google.android.material.card.MaterialCardView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_TileSettings_timing_reset_setReset"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="10dp"
+                    android:visibility="gone">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/tv_TileSettings_timing_reset_editInfo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Reset every "
+                        android:textSize="20sp" />
+
+                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                        android:id="@+id/atv_TileSettings_timing_reset_amount"
+                        android:layout_width="40sp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="10sp"
+                        android:imeOptions="actionDone"
+                        android:importantForAutofill="no"
+                        android:inputType="number"
+                        android:selectAllOnFocus="true"
+                        android:textAlignment="center" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/dropdownsStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:hint="unit"
+                        app:boxCornerRadiusTopEnd="@dimen/dimen_textFieldCorners"
+                        app:boxCornerRadiusTopStart="@dimen/dimen_textFieldCorners"
+                        app:errorEnabled="true"
+                        app:shapeAppearance="@style/dropdownsShape">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/dd_TileSettings_timing_reset_editDropDown"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="none" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_TileSettings_timing_datePicker_dateAndTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="50dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/str_TileSettings_timing_reset_datePicker_title"
+                    android:visibility="gone"
+                    app:cornerRadius="@dimen/dimen_btnCorners" />
+
+                <de.threateningcodecomments.views.WeekdayPicker
+                    android:id="@+id/wdp_TileSettings_timing_reset_my_weekdayPicker"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_TileSettings_timing_reset_weekOfMonth_unitDropdown"
+                    style="@style/dropdownsStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="20dp"
+                    android:animateLayoutChanges="true"
+                    android:hint="Reset"
+                    android:visibility="gone"
+                    app:boxCornerRadiusTopEnd="@dimen/dimen_textFieldCorners"
+                    app:boxCornerRadiusTopStart="@dimen/dimen_textFieldCorners"
+                    app:errorEnabled="true"
+                    app:shapeAppearance="@style/dropdownsShape">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/dd_TileSettings_timing_reset_weekOfMonth_unitDropdown"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="none"
+                        android:visibility="visible" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
+
+        </de.threateningcodecomments.views.TileSettingsMain>
+
+        <de.threateningcodecomments.views.TileSettingsMain
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:hasSummary="true"
+            app:editLayoutIsVisible="true"
+            app:name="Alarm settings"
+            app:src="@drawable/ic_mode_count_down">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="öaslikdjf \n yeah öaslikdjf \n yeah öaslikdjf \n yeah"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </de.threateningcodecomments.views.TileSettingsMain>
 
         <!--Countdown settings-->
         <LinearLayout
@@ -122,18 +256,18 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="12sp">
+                    android:padding="12dp">
 
                     <ImageView
                         android:id="@+id/iv_TileSettings_timing_cdTime_icon"
-                        android:layout_width="50sp"
-                        android:layout_height="50sp"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:src="@drawable/ic_timer" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="10sp"
+                        android:layout_marginStart="10dp"
                         android:orientation="vertical">
 
                         <com.google.android.material.textview.MaterialTextView
@@ -166,14 +300,14 @@
                         android:layout_height="40sp">
 
                         <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="match_parent"
                             android:id="@+id/tv_TileSettings_timing_cdTime_inputDisplay"
+                            android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_gravity="center"
                             android:layout_margin="5sp"
                             android:text="00:00"
-                            android:textSize="25sp"
-                            android:layout_gravity="center"
-                            android:textAlignment="center" />
+                            android:textAlignment="center"
+                            android:textSize="25sp" />
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/et_TileSettings_timing_cdTime_timeInput"
@@ -181,10 +315,10 @@
                             android:layout_height="match_parent"
                             android:layout_marginHorizontal="30sp"
                             android:background="@android:color/transparent"
-                            android:text="@string/constStr_noTextChangedChar"
                             android:cursorVisible="false"
-                            android:textColor="@android:color/transparent"
-                            android:inputType="number" />
+                            android:inputType="number"
+                            android:text="@string/constStr_noTextChangedChar"
+                            android:textColor="@android:color/transparent" />
 
                     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
@@ -224,15 +358,15 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="Reminds"
                             android:textSize="20sp"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            tools:text="Reminds" />
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/tv_TileSettings_timing_reminds_summary"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="currently does nothing lol" />
+                            tools:text="currently does nothing lol" />
 
                     </LinearLayout>
 
