--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
     <color name="colorCancelLight">#FF5060</color>
     <color name="colorCancelDark">#FF7080</color>
 
+    <color name="onSurfaceLight">#FFFFFF</color>
+    <color name="onSurfaceDark">#141414</color>
+
     <color name="contrastDarkMode">#b8b8b8</color>
     <color name="contrastLightMode">#111111</color>
 
@@ -18,4 +21,10 @@
 
     <color name="disabledColor">#C5C5C5</color>
     <color name="disabledColorDark">#474747</color>
+
+    <color name="dayPressed">@color/colorPrimaryDark</color>
+    <color name="daySelected">@color/colorPrimary</color>
+    <color name="daySelectedTextColor">@android:color/white</color>
+    <color name="dayDeselected">#FAFAFA</color>
+    <color name="dayDeselectedTextColor">@android:color/black</color>
 </resources>
