--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -1,6 +1,10 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory app:title="@string/preferences_general_header">
+        <!--<DropDownPreference
+            app:entryValues=""
+            TODO implement first day of week-->
+
         <SwitchPreferenceCompat
             app:defaultValue="false"
             app:key="@string/pref_general_dataSaving_key"
